RESOLVED FIXED133474
Fix a typo, TileGrid::updateTilerLayerProperties
https://bugs.webkit.org/show_bug.cgi?id=133474
Summary Fix a typo, TileGrid::updateTilerLayerProperties
Tim Horton
Reported 2014-06-03 03:32:46 PDT
updateTilerLayerProperties seems like a typo, we don't use the word "Tiler" anywhere else.
Attachments
patch (3.59 KB, patch)
2014-06-03 03:34 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2014-06-03 03:34:04 PDT
Tim Horton
Comment 2 2014-06-03 11:12:23 PDT
Antti Koivisto
Comment 3 2014-06-05 06:14:29 PDT
:|
Note You need to log in before you can comment on or make changes to this bug.