Fix a typo, TileGrid::updateTilerLayerProperties https://bugs.webkit.org/show_bug.cgi?id=133474

Reviewed by Anders Carlsson.

* platform/graphics/ca/mac/TileController.mm:
(WebCore::TileController::setAcceleratesDrawing):
(WebCore::TileController::setTilesOpaque):
(WebCore::TileController::setTileDebugBorderWidth):
(WebCore::TileController::setTileDebugBorderColor):
* platform/graphics/ca/mac/TileGrid.h:
* platform/graphics/ca/mac/TileGrid.mm:
(WebCore::TileGrid::updateTileLayerProperties):
(WebCore::TileGrid::updateTilerLayerProperties):
s/updateTilerLayerProperties/updateTileLayerProperties/g


Canonical link: https://commits.webkit.org/151502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169562 268f45cc-cd09-0410-ab3c-d52691b4dbfc