Source/WebCore/platform/graphics/ca/mac/TileController.mm
@@ -160,7 +160,7 @@ void TileController::setAcceleratesDrawing(bool acceleratesDrawing)
         return;
     m_acceleratesDrawing = acceleratesDrawing;
 
-    tileGrid().updateTilerLayerProperties();
+    tileGrid().updateTileLayerProperties();
 }
 
 void TileController::setTilesOpaque(bool opaque)
@@ -169,7 +169,7 @@ void TileController::setTilesOpaque(bool opaque)
         return;
     m_tilesAreOpaque = opaque;
 
-    tileGrid().updateTilerLayerProperties();
+    tileGrid().updateTileLayerProperties();
 }
 
 void TileController::setVisibleRect(const FloatRect& visibleRect)
@@ -251,7 +251,7 @@ void TileController::setTileDebugBorderWidth(float borderWidth)
         return;
     m_tileDebugBorderWidth = borderWidth;
 
-    tileGrid().updateTilerLayerProperties();
+    tileGrid().updateTileLayerProperties();
 }
 
 void TileController::setTileDebugBorderColor(Color borderColor)
@@ -260,7 +260,7 @@ void TileController::setTileDebugBorderColor(Color borderColor)
         return;
     m_tileDebugBorderColor = borderColor;
 
-    tileGrid().updateTilerLayerProperties();
+    tileGrid().updateTileLayerProperties();
 }
 
 IntRect TileController::bounds() const
